eint23-859: avoid duplicate events (#135)
Co-authored-by: YYermolenko <yevhen.yermolenko@intellecteu.com>